# serializer version: 1
# name: test_all_button_entities_snapshot[button.focused_einstein_restart_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.focused_einstein_restart_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_focused_einstein_restart',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.focused_einstein_restart_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'focused_einstein Restart Container',
    }),
    'context': <ANY>,
    'entity_id': 'button.focused_einstein_restart_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.focused_einstein_start_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.focused_einstein_start_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:play-circle-outline',
    'original_name': 'Start Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_focused_einstein_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.focused_einstein_start_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'focused_einstein Start Container',
      'icon': 'mdi:play-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.focused_einstein_start_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.focused_einstein_stop_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.focused_einstein_stop_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:stop-circle-outline',
    'original_name': 'Stop Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_focused_einstein_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.focused_einstein_stop_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'focused_einstein Stop Container',
      'icon': 'mdi:stop-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.focused_einstein_stop_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.funny_chatelet_restart_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.funny_chatelet_restart_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_funny_chatelet_restart',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.funny_chatelet_restart_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'funny_chatelet Restart Container',
    }),
    'context': <ANY>,
    'entity_id': 'button.funny_chatelet_restart_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.funny_chatelet_start_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.funny_chatelet_start_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:play-circle-outline',
    'original_name': 'Start Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_funny_chatelet_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.funny_chatelet_start_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'funny_chatelet Start Container',
      'icon': 'mdi:play-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.funny_chatelet_start_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.funny_chatelet_stop_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.funny_chatelet_stop_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:stop-circle-outline',
    'original_name': 'Stop Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_funny_chatelet_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.funny_chatelet_stop_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'funny_chatelet Stop Container',
      'icon': 'mdi:stop-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.funny_chatelet_stop_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.practical_morse_restart_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.practical_morse_restart_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_practical_morse_restart',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.practical_morse_restart_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'practical_morse Restart Container',
    }),
    'context': <ANY>,
    'entity_id': 'button.practical_morse_restart_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.practical_morse_start_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.practical_morse_start_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:play-circle-outline',
    'original_name': 'Start Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_practical_morse_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.practical_morse_start_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'practical_morse Start Container',
      'icon': 'mdi:play-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.practical_morse_start_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.practical_morse_stop_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.practical_morse_stop_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:stop-circle-outline',
    'original_name': 'Stop Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_practical_morse_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.practical_morse_stop_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'practical_morse Stop Container',
      'icon': 'mdi:stop-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.practical_morse_stop_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.serene_banach_restart_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.serene_banach_restart_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_serene_banach_restart',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.serene_banach_restart_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'serene_banach Restart Container',
    }),
    'context': <ANY>,
    'entity_id': 'button.serene_banach_restart_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.serene_banach_start_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.serene_banach_start_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:play-circle-outline',
    'original_name': 'Start Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_serene_banach_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.serene_banach_start_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'serene_banach Start Container',
      'icon': 'mdi:play-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.serene_banach_start_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.serene_banach_stop_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.serene_banach_stop_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:stop-circle-outline',
    'original_name': 'Stop Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_serene_banach_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.serene_banach_stop_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'serene_banach Stop Container',
      'icon': 'mdi:stop-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.serene_banach_stop_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.stoic_turing_restart_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.stoic_turing_restart_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <ButtonDeviceClass.RESTART: 'restart'>,
    'original_icon': None,
    'original_name': 'Restart Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_stoic_turing_restart',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.stoic_turing_restart_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'restart',
      'friendly_name': 'stoic_turing Restart Container',
    }),
    'context': <ANY>,
    'entity_id': 'button.stoic_turing_restart_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.stoic_turing_start_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.stoic_turing_start_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:play-circle-outline',
    'original_name': 'Start Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_stoic_turing_start',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.stoic_turing_start_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'stoic_turing Start Container',
      'icon': 'mdi:play-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.stoic_turing_start_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_all_button_entities_snapshot[button.stoic_turing_stop_container-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'button',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'button.stoic_turing_stop_container',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': 'mdi:stop-circle-outline',
    'original_name': 'Stop Container',
    'platform': 'portainer',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': None,
    'unique_id': 'portainer_test_entry_123_stoic_turing_stop',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_button_entities_snapshot[button.stoic_turing_stop_container-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'stoic_turing Stop Container',
      'icon': 'mdi:stop-circle-outline',
    }),
    'context': <ANY>,
    'entity_id': 'button.stoic_turing_stop_container',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
